--- a/css/menu.css
+++ b/css/menu.css
@@ -10,13 +10,15 @@ header{
   /*menu*/
 
 .menu{
-    display: flex;
+   display: flex;
     flex-wrap: wrap;
     width: 100%; max-width: 1400px;
     margin: auto; 
-    justify-content: space-around;
+    justify-content: center;
+    gap: 1rem;
     align-items: center;
     height: 100%;
+   
 }
 .menu > a img{
      max-width: 130px;
@@ -29,12 +31,21 @@ header{
    min-width: 200px; width: 30%;
    justify-content: space-evenly;
    flex-wrap: wrap;
-   margin-left: -100px;
+   
 }
+.ol-menu > li{
+    
+}
+
+
+
+
 
 .buscadorContainer{
 overflow: hidden;
 display: flex;
+margin: .5rem ;
+width: 100%; max-width: 300px;
 }
 #buscador{
     padding: .2rem;
@@ -42,6 +53,7 @@ display: flex;
     border: none; height: 30px;
     border-radius: 5px 0 0 5px;
     outline: none;
+    width: 100%;
 }
 .buscadorBtn{
     height: 30px;
@@ -50,6 +62,7 @@ display: flex;
     border: none;
     cursor: pointer;
     border-radius: 0 5px 5px 0;
+    
 }
 .buscadorBtn > svg{
     width: 80%;
