--- a/css/general.css
+++ b/css/general.css
@@ -12,7 +12,9 @@ a{
     text-decoration: none;
     color: #ffffff;
 }
-
+body{
+    background:#181818;
+}
 
 main{
     background: linear-gradient(130deg, var(--fondo), var(--bordes), var(--fondo));
@@ -26,7 +28,7 @@ main{
 
 .peliculas{
     width: 95%; max-width: 1400px;
-    margin:8rem auto; padding: 1.5rem 0;
+    margin: auto; padding: 1.5rem 0;
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
@@ -105,4 +107,17 @@ footer{
 .contienefoo > p{
     margin: 5rem 0 0 0;
     color: var(--bordes);
+}
+
+
+
+.publicidad{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: .5rem;
+    margin:100px auto;
+    overflow: hidden;
+    text-align: center;
 }
