--- a/css/reproducir.css
+++ b/css/reproducir.css
@@ -11,7 +11,9 @@
 }
 body{
     position: relative;
+      background:#181818;
 }
+
 
 #shareButton{
    color: rgb(255, 255, 255);
@@ -169,6 +171,24 @@ li{
 }
 
 
+
+.botones{
+    margin:0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    padding: .5rem 0;
+    justify-content: space-around;
+}
+.anterior, .siguiente{
+    width: 170px;
+    height: 40px;
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+}
+
+
+
 /*tabletas*/
 @media screen and (max-width:1014px) {
     .datos{
@@ -202,3 +222,16 @@ li{
 
 
 
+
+
+
+.publicidad{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: .5rem;
+    margin:100px auto;
+    overflow: hidden;
+    text-align: center;
+}
